# ai020-meeting-summarizer

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md
backend/: Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  taxonomy.py
backend/pipeline/: __init__.py  ingest.py
backend/routers/: admin.py  chat.py  meetings.py  subscribers.py  webhook.py
backend/schemas/: meeting.py
backend/scripts/: process_meeting.py  seed_demo.py
backend/services/: digests.py  openai_client.py  translate.py
emails/: README.md  chat_reply.html.j2  digest.html.j2
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  PdfPanel.tsx
frontend/src/i18n/: en.json  index.ts  nl.json  pl.json  tr.json  uk.json
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: useUiStore.ts
frontend/src/styles/: index.css  tokens.css
infra/: docker-compose.yml
scripts/: build_emails.py  fallback_server.py  mock_inbound.py  setup_email.md  translate_warmup.sh
tests/: conftest.py  fixtures.py  test_api.py  test_models.py  test_openai_client.py  test_pipeline.py  test_translate.py
